<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.RegistrationActivity"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="25dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/mekdela_amba_university_students_registration_portal"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_id"
        android:inputType="textCapWords"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_full_name"
        android:inputType="textCapWords"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_phone_number"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_address"
        android:inputType="textPostalAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/portfolio_website"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_portfolio_website"
        android:inputType="textUri"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <Spinner
        android:id="@+id/university"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/campus_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/type_your_campus_name"
        android:autofillHints="Campus Name"
        android:background="@android:drawable/editbox_background"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:inputType="textPersonName"
        android:maxLines="1"/>
    <Spinner
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/already_have_account_login"/>
</LinearLayout>