<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.LoginActivity"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="25dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/mekdela_amba_university_students_registration_portal"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="150dp"/>
    <EditText
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_id"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/type_your_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/txt_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account_create_account"/>
</LinearLayout>