<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.ChangeActivity"
    android:orientation="vertical">
    <!-- Toolbar (AppBar) with a back arrow -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:titleTextColor="@android:color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/mekdela_amba_university"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:padding="25dp"
        android:layout_marginTop="70dp"/>
    <EditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/type_current_password"
        android:inputType="textPassword"
        android:background="@android:drawable/editbox_background"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/type_new_password"
        android:inputType="textPassword"
        android:background="@android:drawable/editbox_background"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/change_password"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/delete_user"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"/>
</LinearLayout>